adding travel-gram

--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,210 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <title>Travel-Gram</title>
+</head>
+<body>
+  
+  <header>
+    <h1>Travel Gram</h1>
+    <p class="desktop">You are Currently Viewing in Desktop Grid</p>
+    <p class="tablet">You are Currently Viewing in Tablet Grid</p>
+    <p class="mobile">You are Currently Viewing in Mobile Grid</p>
+  </header>
 
+  <div class="gridContainer">
+      <div class="box box1">
+          <img class="row1__Image" src="https://source.unsplash.com/200x200/?travel,cities/?v1">
+        <div class="txtDivision">
+            <div class="txt">
+              <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+              </P>
+            </div>
+            <div class="shapes">
+              <div class="dot">
+                <i class="far fa-thumbs-up fa-2x"></i>
+              </div>
+
+              <div class="square">
+              <p>random 200x200 image</p>
+              </div>
+            </div>
+        </div>
+      </div>
+      <div class="box box2">
+          <img class="row1__Image" src="https://source.unsplash.com/200x200/?travel,cities/?v2">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <i class="far fa-thumbs-down fa-2x"></i>
+                </div>    
+                <div class="square">
+                    <p>random 200x200 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      <div class="box box3">
+          <img class="row2__left__Image" src="https://source.unsplash.com/600x200/?travel,cities/?v1">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae ducimus eligendi at voluptate quos corporis porro officiis suscipit repellendus vero, autem excepturi veniam eveniet atque aspernatur tenetur! Sed, error amet.
+                  Bacon jowl spicy gangsta ipsum bacon ipsum. Lorems and bacon and ipsums and T-bone flank filet mignon beef short loin, ground round pastrami shank.
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <i class="fas fa-thumbs-up fa-2x"></i>
+                </div>
+                <div class="square">
+                  <p>random 600x200 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      <div class="box box4">
+          <img class="row2__right__Image" src="https://source.unsplash.com/random/300x100/?v2">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <i class="fas fa-thumbs-up fa-2x"></i>
+                </div>
+                <div class="square">
+                  <p>random 300x100 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      <div class="box box5">
+          <img class="row2__right__Image" src="https://source.unsplash.com/300x100/?travel,cities/?v3">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <i class="fas fa-thumbs-down fa-2x"></i>
+                </div>
+                <div class="square">
+                  <p>random 300x100 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      <div class="box box6">
+          <img class="row2__bottom__Image" src="https://source.unsplash.com/200x100/?travel,cities/?v1">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehender
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <i class="fas fa-thumbs-up fa-2x"></i>
+                </div>
+                <div class="square">
+                  <p>random 200x100 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      <div class="box box7">
+          <img class="row3__Image" src="https://source.unsplash.com/800x500/?travel,cities/?v1">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <i class="fas fa-thumbs-down fa-2x"></i>
+                </div>
+                <div class="square">
+                  <p>random 800x500 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      <div class="box box8">
+          <img class="row3__Image" src="https://source.unsplash.com/800x500/?travel,cities?v2">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <!-- <p>3</p> -->
+                    <i class="fas fa-thumbs-up fa-2x"></i>
+                </div>
+                <div class="square">
+                  <p>random 800x500 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      <div class="box box9">
+          <img class="row3__Image" src="https://source.unsplash.com/800x500/?travel,vacation/?v3">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <!-- <p>3</p> -->
+                    <i class="far fa-thumbs-up fa-2x"></i>
+                </div>
+                <div class="square">
+                  <p>random 800x500 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+      <div class="box box10">
+          <img class="row3__Image" src="https://source.unsplash.com/800x500/?travel,cities/?v4">
+          <div class="txtDivision">
+              <div class="txt">
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehenderit dolor doloribus dignissimos, deserunt voluptas?
+                </P>
+              </div>
+              <div class="shapes">
+                <div class="dot">
+                    <!-- <p>3</p> -->
+                    <i class="far fa-thumbs-down fa-2x"></i>
+                </div>
+                <div class="square">
+                  <p>random 800x500 image</p>
+                </div>
+              </div>
+          </div>
+        </div>
+  </div>  
+
+  <script>
+  $(window).on("scroll", function() {
+    if($(window).scrollTop() > 30) {
+        $("header").addClass("active");
+    } else {
+      $("header").removeClass("active");
+    }
+  });
+  </script>
+
+  </body>
+</html>
