--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Pepper Pro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="main.js"></script>
+</head>
+<body>
+    <div class="container">
+        <h1>How hot is your pepper?</h1>
+        <p id="type"><span></span> Pepper</p>
+        <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" style="height:253px; width=486px;" id="pepper">
+        <label for="scovilles">Scoville Heat Units</label>
+        <div id="scovilles"></div>
+        <p><span id="perSecond"></span> SHU's per second</p>
+        <div class="upgrades">
+            <div class="button" name="soil" data-val="1" data-cost="10">Upgrade Soil - <span>10</span></div>
+            <label for="soil">Upgrading soil will add 1 SHU/second.</label>
+
+            <div class="button" name="water" data-val="5" data-cost="50">Optimize Water Schedule - <span>50</span></div> 
+            <label for="water">Upgrading water will add 5 SHU/second.</label>
+
+            <div class="button" name="stress" data-val="10" data-cost="100">Stress Plant - <span>100</span></div>
+            <label for="stress">Stressing your plants will add 10 SHU/second.</label>
+
+            <div class="unlock" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></div>
+            <label for="newpepper">Upgrading your pepper will add 100 SHU/second.</label>
+        </div>
+    </div>
+</body>
+</html>
