trying to figure out how to get data-val multiplier to work

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -23,17 +23,22 @@
         <div id="scovilles"></div>
         <p><span id="perSecond"></span> SHU's per second</p>
         <div class="upgrades">
-            <div class="button" name="soil" data-val="1" data-cost="10">Upgrade Soil - <span>10</span></div>
-            <label for="soil">Upgrading soil will add 1 SHU/second.</label>
+            <div>
+                <div class="button" name="soil" data-val="1" data-cost="10">Upgrade Soil - <span>10</span></div>
+                <label for="soil">Upgrading soil will add <span>1</span> SHU/second.</label>
 
-            <div class="button" name="water" data-val="5" data-cost="50">Optimize Water Schedule - <span>50</span></div> 
-            <label for="water">Upgrading water will add 5 SHU/second.</label>
+                <div class="button" name="water" data-val="5" data-cost="50">Optimize Water Schedule - <span>50</span></div> 
+                <label for="water">Upgrading water will add <span>5</span> SHU/second.</label>
 
-            <div class="button" name="stress" data-val="10" data-cost="100">Stress Plant - <span>100</span></div>
-            <label for="stress">Stressing your plants will add 10 SHU/second.</label>
+                <div class="button" name="stress" data-val="10" data-cost="100">Stress Plant - <span>100</span></div>
+                <label for="stress">Stressing your plants will add <span>10</span> SHU/second.</label>
 
-            <div class="unlock" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></div>
-            <label for="newpepper">Upgrading your pepper will add 100 SHU/second.</label>
+                <div class="unlock" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></div>
+                <label for="newpepper">Upgrading your pepper increases your SHU output by 15%!</label>
+            </div>
+            <div class="researchDiv">
+                <button id="research" data-cost="0">Research Better Techniques</button>
+            </div>
         </div>
     </div>
 </body>
