revised trave-gram

--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -107,7 +107,7 @@
           </div>
         </div>
       <div class="box box6">
-          <img class="row2__bottom__Image" src="https://source.unsplash.com/200x100/?travel,cities/?v1">
+          <img class="row2__bottom__Image" src="https://source.unsplash.com/500x300/?travel,cities/?v1">
           <div class="txtDivision">
               <div class="txt">
                 <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nesciunt cumque officiis optio iste odit nostrum ipsam illo totam voluptatem aut quibusdam facere id reprehender
@@ -118,7 +118,7 @@
                     <i class="fas fa-thumbs-up fa-2x"></i>
                 </div>
                 <div class="square">
-                  <p>random 200x100 image</p>
+                  <p class="img_size_tag">random 200x100 image</p>
                 </div>
               </div>
           </div>
