continue landing page

--- a/05week/grid-landing-page/index.html
+++ b/05week/grid-landing-page/index.html
@@ -20,28 +20,52 @@
         <div class="g1-n1-b3">
           <p class="n1-b3">Shop <br> Sales</p>
         </div>
-        <div class="g1-n1-b4"></div>
+        <div class="g1-n1-b4">
+          <p class="n1-b4">FAQ <br> Delivery</p>
+        </div>
+        <div class="g1-n1-b5">
+            <i class="fas fa-bars icon=large"></i>
+            <i class="fas fa-search"></i>
+        </div>
+        <div class="g1-n1-b6">
+          <p class="n1-b6">Fashion</p>
+        </div>
+        <div class="g1-n1-line1"></div>
+        <div class="g1-n1-line2"></div>
+        <div class="g1-n1-line3"></div>
+        <div class="g1-n1-line4"></div>
+        <div class="g1-n1-line5"></div>
+        <div class="g1-n1-line6"></div>
+        <div class="g1-n1-line7"></div>
+        <div class="g1-n1-line8"></div>
+        <div class="g1-n1-line9"></div>
       </div>
     </div>
-    <div class="box box2">two</div>
+    <div class="box box2">
+      <div id="box2-grid">
+        <div class="g1-n2-b1">
+          <img src="./Screen Shot 2018-12-16 at 2.10.00 PM.png" alt="" class="n2-b1">
+        </div>
+        <div class="g1-n2-b2">
+          <img src="./Screen Shot 2018-12-16 at 2.31.44 PM.png" alt="" class="n2-b2">
+        </div>
+        <div class="g1-n2-b3">
+          <p class="n2-b3">Elise x Gal</p>
+        </div>
+        <div class="g1-n2-b4">
+          <p class="n2-b4">Elise latest collaboration with Italian fashion <br> designer Gal Moris symbolizes his playful <br> childhood influences and experimental</p>
+        </div>
+        <div class="g1-n2-b5">
+          <hr width="400">
+        </div>
+        <div class="g1-n2-b6">
+          <p class="n2-b6">Instagram</p>
+        </div>
+
+      </div>
+    </div>
     <div class="box box3">three</div>
-    <div class="box box4">four</div>
-    <div class="box box5">five</div>
-    <div class="box box6">six</div>
-    <div class="box box7">seven</div>
-    <div class="box box8">eight</div>
-    <div class="box box9">nine</div>
-    <div class="box box10">ten</div>
-    <div class="box box11">eleven</div>
-    <div class="box box12">twelve</div>
-    <div class="box box13">thirteen</div>
-    <div class="box box14">fourteen</div>
-    <div class="box box15">fifteen</div>
-    <div class="box box16">sixteen</div>
-    <div class="box box17">seventeen</div>
-    <div class="box box18">eighteen</div>
-    <div class="box box19">nineteen</div>
-    <div class="box box20">twenty</div>
+    
 
   </div>
   
