--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="css/hover-min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -18,26 +19,32 @@
     <div class="container">
         <h1>How hot is your pepper?</h1>
         <p id="type"><span></span> Pepper</p>
-        <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" style="height:253px; width=486px;" id="pepper">
+        <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" style="height:253px; width=486px;" id="pepper" class="hvr-grow">
         <label for="scovilles">Scoville Heat Units</label>
         <div id="scovilles"></div>
         <p><span id="perSecond"></span> SHU's per second</p>
         <div class="upgrades">
             <div>
-                <div class="button" name="soil" data-val="1" data-cost="10">Upgrade Soil - <span>10</span></div>
-                <label for="soil">Upgrading soil will add <span>1</span> SHU/second.</label>
+                <button class="button hvr-fade" name="soil" data-val="1" data-cost="10">Upgrade Soil - <span>10</span></button>
+                <label for="soil">Upgrading soil will add <span>1</span> SHU every 3 seconds.</label>
 
-                <div class="button" name="water" data-val="5" data-cost="50">Optimize Water Schedule - <span>50</span></div> 
-                <label for="water">Upgrading water will add <span>5</span> SHU/second.</label>
+                <button class="button hvr-fade" name="water" data-val="6" data-cost="50">Optimize Water Schedule - <span>50</span></button> 
+                <label for="water">Upgrading water will add <span>6</span> SHU every 3 seconds.</label>
 
-                <div class="button" name="stress" data-val="10" data-cost="100">Stress Plant - <span>100</span></div>
-                <label for="stress">Stressing your plants will add <span>10</span> SHU/second.</label>
+                <button class="button hvr-fade" name="stress" data-val="13" data-cost="100">Stress Plant - <span>100</span></button>
+                <label for="stress">Stressing your plants will add <span>13</span> SHU every 3 seconds.</label>
 
-                <div class="unlock" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></div>
+                <!-- <button class="unlock hvr-fade" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></button>
                 <label for="newpepper">Upgrading your pepper increases your SHU output by 15%!</label>
+
+                <button id="research" class="hvr-pulse" data-cost="5000">Pure Capsaicin - <span id="researchCost">5000</span></button> -->
             </div>
             <div class="researchDiv">
-                <button id="research" data-cost="0">Research Better Techniques</button>
+                <button class="unlock hvr-fade" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></button>
+                <label for="newpepper">Upgrading your pepper increases your SHU output by 15%!</label>
+
+                <button id="research" class="hvr-pulse" data-cost="5000">Pure Capsaicin - <span id="researchCost">5000</span></button>
+                <label for="research">Using Pure Capsaicin will double the Scoville Heat Units of all growing techniques.</label>
             </div>
         </div>
     </div>
