added some hover effects and styled a little more

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -17,9 +17,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>How hot is your pepper?</h1>
-        <p id="type"><span></span> Pepper</p>
+        <h1>How <span>hot</span> is your pepper?</h1>
         <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" style="height:253px; width=486px;" id="pepper" class="hvr-grow">
+        <p id="type"><span></span> Pepper</p>
+
         <label for="scovilles">Scoville Heat Units</label>
         <div id="scovilles"></div>
         <p><span id="perSecond"></span> SHU's per second</p>
