--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -21,9 +21,9 @@
         <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" style="height:253px; width=486px;" id="pepper" class="hvr-grow">
         <p id="type"><span></span> Pepper</p>
 
-        <label for="scovilles">Scoville Heat Units</label>
+        <label for="scovilles">Scoville Heat Units:</label>
         <div id="scovilles"></div>
-        <p><span id="perSecond"></span> SHU's per second</p>
+        <p><span id="perSecond"></span> SHU's every 3 seconds</p>
         <div class="upgrades">
             <div>
                 <button class="button hvr-fade" name="soil" data-val="1" data-cost="10">Upgrade Soil - <span>10</span></button>
@@ -34,11 +34,6 @@
 
                 <button class="button hvr-fade" name="stress" data-val="13" data-cost="100">Stress Plant - <span>100</span></button>
                 <label for="stress">Stressing your plants will add <span>13</span> SHU every 3 seconds.</label>
-
-                <!-- <button class="unlock hvr-fade" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></button>
-                <label for="newpepper">Upgrading your pepper increases your SHU output by 15%!</label>
-
-                <button id="research" class="hvr-pulse" data-cost="5000">Pure Capsaicin - <span id="researchCost">5000</span></button> -->
             </div>
             <div class="researchDiv">
                 <button class="unlock hvr-fade" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></button>
