--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Customr Satisfaction</title>
 </head>
 <body>
-    <h1>This is a Form</h1>
-    <form>
-        <input type="email" name="email" placeholder="Email">
-        <input type="password" name="password" placeholder="Password"><br>
-        <input type="url" name="url" placeholder="URL"> <br>
-        <div>Yes 	&nbsp; 	&nbsp; No</div>
-        <input type="checkbox" name="checkbox">
-        <input type="checkbox" name="checkbox"><br>
-        <input type="radio" name="radio">
-        <input type="radio" name="radio"><br>
-        <div>1	&nbsp; 	&nbsp; 	&nbsp; 	&nbsp; 	&nbsp; 	&nbsp; 	&nbsp; 10</div>
-        <input type="range" name="range" min="1" max="10" value="5" step="1"> 
+    <h1>Customer Satisfaction</h1>
+        <form>
+            <input type="email" name="email" placeholder="Email">
+            <input type="password" name="password" placeholder="Password"><br>
+            <input type="url" name="url" placeholder="URL"> <br><br>
 
-    </form>
-    
+            <span>Did you enjoy your experience?</span>
+            <div>Yes 	&nbsp; 	&nbsp; No</div>
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox"><br><br>
+
+            <span>Would You come again?</span>
+            <div>Yes 	&nbsp; 	&nbsp; No</div>
+            <input type="radio" name="radio">
+            <input type="radio" name="radio"><br><br>
+
+            <span>On the scales rate your experience 1 being the worst and 100 being the best</span>
+            <div class="sliderrange"><span>1</span>	<span>50</span> <span>100</sp></div>
+            <input class="slider" type="range" name="range" min="1" max="100" value="50" step="1"> 
+        </form>
 </body>
 </html>
