did the middle section

--- a/05week/grid-landing-page/index.html
+++ b/05week/grid-landing-page/index.html
@@ -44,10 +44,10 @@
     <div class="box box2">
       <div id="box2-grid">
         <div class="g1-n2-b1">
-          <img src="./Screen Shot 2018-12-16 at 2.10.00 PM.png" alt="" class="n2-b1">
+          <img src="./Screen Shot 2018-12-16 at 10.26.41 PM.png" alt="" class="n2-b1">
         </div>
         <div class="g1-n2-b2">
-          <img src="./Screen Shot 2018-12-16 at 2.31.44 PM.png" alt="" class="n2-b2">
+          <img src="./katie-maxie.jpg" alt="" class="n2-b2">
         </div>
         <div class="g1-n2-b3">
           <p class="n2-b3">Elise x Gal</p>
@@ -61,10 +61,26 @@
         <div class="g1-n2-b6">
           <p class="n2-b6">Instagram</p>
         </div>
+        <div class="g1-n2-b7">
+          <p class="n2-b7">Share.</p>
+        </div>
+        <div class="g1-n2-line1"></div>
+        <div class="g1-n2-line2"></div>
+        <div class="g1-n2-line3"></div>
+        <div class="g1-n2-line4"></div>
+        <div class="g1-n2-line5"></div>
+        <div class="g1-n2-line6"></div>
+        <div class="g1-n2-line7"></div>
+        <div class="g1-n2-line8"></div>
+        <div class="g1-n2-line9"></div>
 
       </div>
     </div>
-    <div class="box box3">three</div>
+    <div class="box box3">
+      <div id="box3-grid">
+        <div class="g1-n3-b1"></div>
+      </div>
+    </div>
     
 
   </div>
