--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
 
+    <title>Santa's Sleigh</title>
+</head>
+<body>
+    <div class='container'>
+        <h1>Santa's Sleigh</h1>
+        <div id="click_area">
+            <img id="click" type='button' src="https://img.pngio.com/santa-sleigh-png-santa-sleigh-png-425_265.png">
+        </div>
+        <hr>
+        <p>
+            Magic: <span id="total_clicks">0</span><br>
+            Houses per <small id="time_period">1.00</small> seconds: <span id="clicks_per_second">0</span>
+        </p>
+        <h3>Buy</h3>
+        <table class="table">
+            <tr>
+                <td>Sack Capacity</td>
+                <td><span id="sack_cap">Lvl 0</span></td>
+                <td><button id="buy_click" type="button" class="button button_success">Buy for 1</button></td>
+            </tr>
+            <tr>
+                <td>Reindeers</td>
+                <td><span id="reindeers">Lvl 0</span></td>
+                <td><button id="reindeers_number" type="button" class="button button_success">Buy for 100</button></td>
+            </tr>
+            <tr>
+              <td>Elves</td>  
+              <td><span id="elves"></span></td>
+              <td><button id="elves_number" type="button" class="button button_success">Buy for 1000</button></td>
+            </tr>
+
+        </table>
+        <div id="notification">
+
+        </div>
+    </div>
+
+
+    <script type="text/javascript" src="./js/script.js"></script>
+</body>
