created a responsive travel gram using grid

--- a/05week/travel-gram/index.html
+++ b/05week/travel-gram/index.html
@@ -1,1 +1,24 @@
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Travel Gram</title>
+</head>
+<body>
+  <h1>Travel Gram</h1>
+  <div class="gridContainer">
+    <div class="gridItem gridItem-1">1</div>
+    <div class="gridItem gridItem-2">2</div>
+    <div class="gridItem gridItem-3">3</div>
+    <div class="gridItem gridItem-4">4</div>
+    <div class="gridItem gridItem-5">5</div>
+    <div class="gridItem gridItem-6">6</div>
+    <div class="gridItem gridItem-7">7</div>
+    <div class="gridItem gridItem-8">8</div>
+    <div class="gridItem gridItem-9">9</div>
+    <div class="gridItem gridItem-10">10</div>
+  </div>
+</body>
+</html>
