--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -18,10 +18,10 @@
 <body>
     <div class="container">
         <h1>How <span>hot</span> is your pepper?</h1>
-        <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" style="height:253px; width=486px;" id="pepper" class="hvr-grow">
+        <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" style="height:202px; width=389px;" id="pepper" class="hvr-grow">
         <p id="type"><span></span> Pepper</p>
 
-        <label for="scovilles">Scoville Heat Units:</label>
+        <label for="scovilles" id="totalLabel">Scoville Heat Units:</label>
         <div id="scovilles"></div>
         <p><span id="perSecond"></span> SHU's every 3 seconds</p>
         <div class="upgrades">
