--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <div data-stack="1">
-    <div data-block="100"></div>
-    <div data-block="75"></div>
-    <div data-block="50"></div>
-    <div data-block="25"></div>
+    <div data-block="100">Y</div>
+    <div data-block="75">R</div>
+    <div data-block="50">G</div>
+    <div data-block="25">B</div>
   </div>
   <div data-stack="2">
   </div>
