did a little tweaking, styling & animation

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -18,22 +18,22 @@
 <body>
     <div class="container">
         <h1>How <span>hot</span> is your pepper?</h1>
-        <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" style="height:202px; width=389px;" id="pepper" class="hvr-grow">
+        <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" id="pepper">
         <p id="type"><span></span> Pepper</p>
 
         <label for="scovilles" id="totalLabel">Scoville Heat Units:</label>
         <div id="scovilles"></div>
-        <p><span id="perSecond"></span> SHU's every 3 seconds</p>
+        <p><span id="perSecond"></span> SHU's every 2 seconds</p>
         <div class="upgrades">
             <div>
                 <button class="button hvr-fade" name="soil" data-val="1" data-cost="10">Upgrade Soil - <span>10</span></button>
-                <label for="soil">Upgrading soil will add <span>1</span> SHU every 3 seconds.</label>
+                <label for="soil">Upgrading soil will add <span>1</span> SHU every 2 seconds.</label>
 
                 <button class="button hvr-fade" name="water" data-val="6" data-cost="50">Optimize Water Schedule - <span>50</span></button> 
-                <label for="water">Upgrading water will add <span>6</span> SHU every 3 seconds.</label>
+                <label for="water">Upgrading water will add <span>6</span> SHU every 2 seconds.</label>
 
                 <button class="button hvr-fade" name="stress" data-val="13" data-cost="100">Stress Plant - <span>100</span></button>
-                <label for="stress">Stressing your plants will add <span>13</span> SHU every 3 seconds.</label>
+                <label for="stress">Stressing your plants will add <span>13</span> SHU every 2 seconds.</label>
             </div>
             <div class="researchDiv">
                 <button class="unlock hvr-fade" name="newpepper" data-val="100" data-cost="1000">Unlock New Pepper - <span>1000</span></button>
