Check-point 3 Initital Upload

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://csshake.surge.sh/csshake.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Super Smash Brothers:Click</title>
+</head>
+<body>
+    <h1>SUPER SMASH BROS. CLICK</h1>
+    <div id="count" class="display">0</div>
+    <img id="symbol" src="pics/symbol.jpg" alt="symbol">
+    <div id="btn_1" class="btn">Unlock Character</div>
+    <div id="btn_2" class="btn">Double Character Click</div>
+    <div id="btn_3" class="btn">Master Hand</div>
+    <div id="btn_4" class="btn">Final Smash</div>
+    <div id="reset" class="display">Reset</div>
+</body>
+</html>
