Updated checkpoint three

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -14,11 +14,20 @@
 <body>
     <h1>SUPER SMASH BROS. CLICK</h1>
     <div id="count" class="display">0</div>
-    <img id="symbol" src="pics/symbol.jpg" alt="symbol">
-    <div id="btn_1" class="btn">Unlock Character</div>
+    <div id="wrapper">
+        <img id="symbol" src="pics/symbol.jpg" alt="symbol">
+    </div>
+    <div>
+        <span id="cost_1" class="cost btn">10</span>
+        <span id="btn_1" class="btn">Unlock Character</span>
+        <span id="counter_1" class="counter btn">0/80</span>
+    </div>
     <div id="btn_2" class="btn">Double Character Click</div>
     <div id="btn_3" class="btn">Master Hand</div>
     <div id="btn_4" class="btn">Final Smash</div>
-    <div id="reset" class="display">Reset</div>
+    <div>
+        <span id="reset" class="display">Reset</span>
+        <span id="godMode" class="display">God Mode</span>
+    </div>
 </body>
 </html>
