--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,34 @@
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Document</title>
+</head>
+<body>
+    <div id="grid-container">
+        
+        <div class="square square1">1</div>
+        <div class="square square2">2</div>
+        <div class="square square3">3</div>
+        <div class="square square4">4</div>
+        <div class="square square5">5</div>
+        <div class="square square6">6</div>
+        <div class="square square7">7</div>
+        <div class="square square8">8</div>
+        <div class="square square9">9</div>
+        <div class="square square10">10</div>
+        <div class="square square11">11</div>
+        <div class="square square12">12</div>
+        
+      </div>
+      <div id="hello">
+        <div class="hello">H</div>
+        <div class="hello">E</div>
+        <div class="hello">L</div>
+        <div class="hello">L</div>
+        <div class="hello">O</div>
+      </div>
+</body>
+</html>
