--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -23,7 +23,6 @@
   </head>
   <body>
     <h1>SUPER SMASH BROS. CLICK</h1>
-
     <div id="count" class="dmgCount display">0</div>
 
     <div id="holder">
@@ -39,11 +38,11 @@
           <span class="label counter btn">Item #</span>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <span id="cost_2" class="cost btn">5</span>
           <span id="btn_2" class="btn">Double Character Click</span>
           <span id="counter_2" class="counter btn">0/100</span>
-        </div>
+        </div> -->
 
         <div class="row">
           <span id="cost_1" class="cost btn">10</span>
@@ -62,7 +61,7 @@
           <span id="btn_4" class="btn">Final Smash</span>
           <span id="counter_4" class="counter btn">0/1</span>
         </div>
-
+        <br>
         <div>
           <span id="reset" class="display">Reset</span>
           <span id="godMode" class="display">God Mode</span>
