--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -15,6 +15,7 @@
     <img class="mybigdumbface" src="images/headshot.jpg" />
     <div class="nav-wrapper">
         <div class="nav-item"><a class="about active" href="./index.html">Home</a></div>
+        <div class="nav-item"><a class="bio" href="./pages/bio.html">Bio Part 2</a></div>
         <div class="nav-item"><a class="resume" href="./pages/resume.html">Resume</a></div>
         <div class="nav-item"><a class="portfolio" href="./pages/portfolio.html">Portfolio</a></div>
         <div class="nav-item"><a class="contact" href="./pages/contact.html">Contact</a></div>
