--- a/checkpoint-two/pages/contact.html
+++ b/checkpoint-two/pages/contact.html
@@ -15,6 +15,7 @@
     <img class="mybigdumbface" src="../images/headshot.jpg" />
     <div class="nav-wrapper">
         <div class="nav-item"><a class="about" href="../index.html">Home</a></div>
+        <div class="nav-item"><a class="bio" href="./bio.html">Bio Part 2</a></div>
         <div class="nav-item"><a class="resume" href="./resume.html">Resume</a></div>
         <div class="nav-item"><a class="portfolio" href="./portfolio.html">Portfolio</a></div>
         <div class="nav-item"><a class="contact active" href="./contact.html">Contact</a></div>
