--- a/checkpoint-two/pages/portfolio.html
+++ b/checkpoint-two/pages/portfolio.html
@@ -12,9 +12,10 @@
 <body>
     <nav class="grid">
     <h4>Jim Schaefer</h4>
-    <img class="mybigdumbface" class="mybigdumbface" src="../images/headshot.jpg" />
+    <img class="mybigdumbface" src="../images/headshot.jpg" />
     <div class="nav-wrapper">
         <div class="nav-item"><a class="about" href="../index.html">Home</a></div>
+        <div class="nav-item"><a class="bio" href="./bio.html">Bio Part 2</a></div>
         <div class="nav-item"><a class="resume" href="./resume.html">Resume</a></div>
         <div class="nav-item"><a class="portfolio active" href="./portfolio.html">Portfolio</a></div>
         <div class="nav-item"><a class="contact" href="./contact.html">Contact</a></div>
