big upload of assignments

--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <!-- <div class="container"> -->
   <div data-stack="1">
     <div data-block="100"></div>
     <div data-block="75"></div>
@@ -16,8 +17,12 @@
   </div>
   <div data-stack="3">
   </div>
+<!-- </div> -->
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  
 </body>
 </html>
