--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <title>Grandma's House</title>
+</head>
+<body>
+    <header>
+        <h1>Grandma's House</h1>
+        <h2>Grandma wants to adopt all the cats, but she needs help. <br>
+            Make money by helping her knit so she can adopt more kitties.</h2>
+    </header>
+    <div class="container">
+        <img class="yarn" src="img/yarn.jpg">
+    </div>
+    <main>
+        <div class="money">You have: $<div id="totalmoney" placeholder="0"></div>.</div>
+        <div class="item">
+            Buy Cat: $10 > <img class="cat" src="img/cat.jpg" data-cost="10">
+            <div class="catsowned">You have: <div id="totalcats" placeholder="0"></div> cats.</div>
+        </div>
 
+      
+      <!-- <div class="button" data-val="1" data-cost="100">Bigger House - <span>100</span></div> -->
+      <!-- <div class="button" data-val="10" data-cost="1000">Horsepower - <span>1000</span></div> -->
+      <!-- <div class="button" data-val="100" data-cost="10000">Rocketpower - <span>10000</span></div> -->
+    </div>
+    </main>
+<script src="js/script.js"></script>
+
+</body>
+</html>
