working on that hover

--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -7,7 +7,8 @@
   <title>Document</title>
 </head>
 <body>
-    <div id="grid-container">
+  <div id="wrapper">
+    <!-- <div class="grid-container">
         
         <div class="square square1">1</div>
         <div class="square square2">2</div>
@@ -22,13 +23,21 @@
         <div class="square square11">11</div>
         <div class="square square12">12</div>
         
-      </div>
+      </div> -->
       <div id="hello">
         <div class="hello">H</div>
         <div class="hello">E</div>
         <div class="hello">L</div>
         <div class="hello">L</div>
         <div class="hello">O</div>
+      </div>
+      <div id="world">
+        <div class="world">W</div>
+        <div class="world">O</div>
+        <div class="world">R</div>
+        <div class="world">L</div>
+        <div class="world">D</div>
+      </div>
       </div>
 </body>
 </html>
