--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <div id="container">
+        <img class="flame" src="/img/fire.png" height="272px" width="161.6px">
         <div class="column1">
-            <img src="/img/rocket.png" height="70%" width="70%">
+            <img class="rocket" src="/img/rocket.png" height=322.7px width=574px>
         </div>
         <div class="column2">
             <div class="speedometer"></div>
