--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1149,6 +1149,28 @@
       <div class="squares"></div>
       <div class="squares"></div>
       <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div> 
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div> 
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
+      <div class="squares"></div>
 
 
   <div class="container">
