got pepper to shake on click

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -12,13 +12,16 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="js/script.js"></script>
     <script src="main.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>How <span>hot</span> is your pepper?</h1>
-        <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" id="pepper">
+        <div id="shaker">
+            <img src="img/Red_Chili_Pepper_Transparent_PNG_Clip_Art_Image.png" id="pepper">
+        </div>
         <p id="type"><span></span> Pepper</p>
 
         <label for="scovilles" id="totalLabel">Scoville Heat Units:</label>
