created a page using transitions and transformations

--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,27 @@
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Transitions and Transformations</title>
+</head>
+<body>
+  <div class="container">
+    <div class="square_container">
+    <div class="square_big square1"></div>
+    <div class="square_small square2"></div>
+    <div class="square_big square3"></div>
+    <div class="square_small square4"></div>
+    <div class="square_big square5"></div>
+    <div class="square_small square6"></div>
+    <div class="square_big square7"></div>
+    <div class="square_small square8"></div>
+    <div class="square_big square9"></div>
+    <div class="square_small square10"></div>
+    <div class="square_big square11"></div>
+    <div class="square_small square12"></div>
+  </div>
+  </div>
+</body>
+</html>
