--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -6,16 +6,17 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-stack="1">
-    <div data-block="100"></div>
-    <div data-block="75"></div>
-    <div data-block="50"></div>
-    <div data-block="25"></div>
+  <div class = "container">
+      <div data-stack="1">
+        <div data-block="100"></div>
+        <div data-block="75"></div>
+        <div data-block="50"></div>
+        <div data-block="25"></div>
+    </div>
+    <div data-stack="2"></div>
+    <div data-stack="3"></div>
   </div>
-  <div data-stack="2">
-  </div>
-  <div data-stack="3">
-  </div>
+  
   <div id="announce-game-won"></div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
