--- a/04week/tomorrows-technology/index.html
+++ b/04week/tomorrows-technology/index.html
@@ -26,6 +26,25 @@
 						<p class="paragraph">Sometimes with the tech world comes up with has already been tried and rejected and really doesn't need to be resurrected- like the taylorist view...</p>
 						<button>TECHNOLOGY</button>
 
-    </div>
+		</div>
+		<div class="flexbox2">
+		<div class="mobile-main">
+			<div class="main-links">
+				<h1>Useful Links</h1>
+				<a href="#">About</a><br/>
+				<a href="#">Jobs</a><br/>
+				<a href="#">Team</a><br/>
+				<a href="#">Advertise</a><br/>
+				<a href="#">Terms</a><br/>
+			</div>
+			<div class="social-media">
+				<h1>Social Media</h1>
+				<a href="#">Facebook</a><br/>
+				<a href="#">Instagram</a><br/>
+				<a href="#">Twitter</a><br/>
+
+			</div>
+		</div>
+		</div>
 </body>
 </html>
