--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,41 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>Checkpoin-Two</title>
+</head>
+<body>
+  <img class="body"  src="./set-of-classic-bright-geometric-patterns-vector-1799008.jpg" alt="">
+  <header>
+    <ul class="amber">
+      <li class="amber">A</li>
+      <li class="amber">M</li>
+      <li class="amber">B</li>
+      <li class="amber">E</li>
+      <li class="amber">R</li>
+    </ul>
+    <ul class="jones">
+      <li class="jones">J</li>
+      <li class="jones">O</li>
+      <li class="jones">N</li>
+      <li class="jones">E</li>
+      <li class="jones">S</li>
 
+    </ul>
+  </header>
+  <div id="grid-wrapper">
+    <div class="box box1">
+      <img src="./tree.png" alt="" class="box1">
+    </div>
+    <div class="box box2">
+      <p class="coding">Coding</p>
+    </div>
+    <div class="box box3">
+        <p class="girls">Girls</p>
+    </div>
+  </div>
+  
+</body>
+</html>
