im getting stuck on designing it

--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -27,7 +27,7 @@
   </header>
   <div id="grid-wrapper">
     <div class="box box1">
-      <img src="./tree.png" alt="" class="box1">
+      <!-- <img src="./tree.png" alt="" class="box1"> -->
     </div>
     <div class="box box2">
       <p class="coding">Coding</p>
@@ -35,6 +35,19 @@
     <div class="box box3">
         <p class="girls">Girls</p>
     </div>
+    <div class="box box4">
+      <img src="http://pngimg.com/uploads/bellflower/bellflower_PNG34.png" alt="" class="box4">
+    </div>
+    <div class="box box5">
+      <hr width="300">
+    </div>
+    <div class="box box6">
+      <hr width="300"> 
+    </div>
+    <div class="box box7"></div>
+    <div class="box box8"></div>
+    <div class="box box9"></div>
+    <div class="box box10"></div>
   </div>
   
 </body>
