--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <title>Checkpoin-Two</title>
 </head>
 <body>
@@ -48,6 +49,24 @@
     <div class="box box8"></div>
     <div class="box box9"></div>
     <div class="box box10"></div>
+    <div class="box box11 ">
+      <div id="box11">
+          <i class="fas fa-envelope fa-5x"></i>
+      <a href="https://www.google.com/" class="diagonal1">AmberLovesCats14@gmail.com</a>
+      </div>
+    </div>
+    <div class="box box12 ">
+      <div id="box12">
+        <i class="fab fa-github-square fa-5x"></i>
+        <a href="https://github.com/amberlovescats14" class="diagonal2">github.com/amberlovescats14</a>
+      </div>
+    </div>
+    <div class="box box13 ">
+        <div id="box13">
+            <i class="fab fa-linkedin-in fa-5x"></i>
+          <a href="https://www.linkedin.com/in/amber-jones-59a901124/" class="diagonal3">LinkedIn.com/in/AmberJones59a901</a>
+        </div>
+      </div>
   </div>
   
 </body>
