--- a/05week/transitions-and-transformations/index.html
+++ b/05week/transitions-and-transformations/index.html
@@ -1,1 +1,25 @@
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Transition project Squares</title>
+  <link rel="stylesheet" href="./css/style.css">
+</head>
+<body>
+    <div class="grid-container">
+        <div class="square square-1 translateX">1</div>
+        <div class="square square-2 mymove">2</div>
+        <div class="square square-3 translateX">3</div>
+        <div class="square square-4">4</div>
+        <div class="square square-5 translateX">5</div>
+        <div class="square square-6">6</div>
+        <div class="square square-7 translateX">7</div>
+        <div class="square square-8">8</div>
+        <div class="square square-9 translateX">9</div>
+        <div class="square square-10">10</div>
+        <div class="square square-11 translateX">11</div>
+        <div class="square square-12">12</div>
+      </div>
+</body>
+</html>
