finished the link boxes need to add the boxes to the mobile media query.

--- a/04week/tomorrows-technology/index.html
+++ b/04week/tomorrows-technology/index.html
@@ -30,17 +30,17 @@
 		<div class="mobile-main">
 			<div class="main-links">
 				<h1>Useful Links</h1>
-				<a href="#">About</a><br/>
-				<a href="#">Jobs</a><br/>
-				<a href="#">Team</a><br/>
-				<a href="#">Advertise</a><br/>
-				<a href="#">Terms</a><br/>
+				<p href="#">About</p>
+				<p href="#">Jobs</p>
+				<p href="#">Team</p>
+				<p href="#">Advertise</p>
+				<p href="#">Terms</p>
 			</div>
 			<div class="social-media">
 				<h1>Social Media</h1>
-				<a href="#">Facebook</a><br/>
-				<a href="#">Instagram</a><br/>
-				<a href="#">Twitter</a><br/>
+				<p href="#">Facebook</p>
+				<p href="#">Instagram</p>
+				<p href="#">Twitter</p>
 			</div>
 		</div>
 		</div>
