fixing some github stuff

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -121,7 +121,7 @@
       <div class="box box15"></div>
       <div class="box box16"></div>
       <div class="box box17"></div>
-      <div class="box box18"><p>ABOUT ME</p></div> <!-- animated hover banner/title -->
+      <div class="box box18 "><p>ABOUT ME</p></div> <!-- animated hover banner/title -->
       <div class="box box19"></div>
       <div class="box box20"></div>
       <div class="box box21"></div>
@@ -172,6 +172,10 @@
       <div class="box box63"></div>
       <!-- footer box -->
       <div class="box box64"><p>&copy; 2018 Ron Hajewski - This is a work in progress ;)</p></div>
+      <div class=""></div>
     </div>
-  </body>
+  
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+  <script src="./script.js"></script>
+</body>
 </html>
