--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -4,58 +4,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-  <title>Checkpoin-Two</title>
+  <title>Check-Point-2</title>
 </head>
 <body>
   <header>
-    <ul class="amber">
-      <li class="amber">A</li>
-      <li class="amber">M</li>
-      <li class="amber">B</li>
-      <li class="amber">E</li>
-      <li class="amber">R</li>
-    </ul>
-    <ul class="jones">
-      <li class="jones">J</li>
-      <li class="jones">O</li>
-      <li class="jones">N</li>
-      <li class="jones">E</li>
-      <li class="jones">S</li>
-
-    </ul>
+    small heading:PhoneNumber
   </header>
-  
-  <div id="grid-wrapper">
-    <!---- Im not sure I want this picture in there
-    <div class="box box1">
-      <!-- <img src="./tree.png" alt="" class="box1"> 
-    </div> --->
-    <div class="box box7">
-        <i class="fas fa-envelope fa-4x"></i>
-        <a href="https://www.google.com/" class="diagonal1">Email Me!</a>
+  <nav>
+    Logo and Nav
+  </nav>
+  <main>
+    <div class="left">
+      aCoupleCards
     </div>
-    <div class="box box2">
-      <p class="coding">Coding</p>
+    <div class="right">
+      BoxLikeAirline
     </div>
-    
-    <div class="box box3">
-        <p class="girls">Girls</p>
-    </div>
-    
-    <div class="box box4">
-      <img src="http://pngimg.com/uploads/bellflower/bellflower_PNG34.png" alt="" class="box4">
-    </div>
-   
-    <div class="box box8 ">
-      <div id="box12">
-        <i class="fab fa-github-square fa-5x"></i>
-        <a href="https://github.com/amberlovescats14" class="diagonal2">My_Stuff!</a>
+    <hr>
+    <div id="grid-wrapper">
+      <div class="box1">
+        Images
+      </div>
+      <div class="box2">
+        links
+      </div>
+      <div class="box3">
+        more_links
+      </div>
+      <div class="box4">
+        <!--image with no background-->
       </div>
     </div>
-    <div class="box box5">
-      <hr class="box5">
-    </div>
-   
+  </main>
+  <aside></aside>
+  <footer>
+    more stuff
+  </footer>
 </body>
 </html>
