--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -36,7 +36,7 @@
       </div>
     </div>
   </main>
-  <aside></aside>
+  <aside>Now sure what I'll put in here</aside>
   <footer>
     more stuff
   </footer>
