--- a/06week/Holiday_Brutalist/index.html
+++ b/06week/Holiday_Brutalist/index.html
@@ -56,6 +56,10 @@
     <div class="box box5">
       <hr class="box5">
     </div>
+    <div class="box box6">
+      <img src="http://pngimg.com/uploads/apple_logo/apple_logo_PNG19684.png" alt="" class="box6">
+    </div>
+  </div>
    
 </body>
 </html>
