--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -18,7 +18,7 @@
     <header>
       <div class="header">
       <p class="header">Amber Jones</p>
-      <img src="./Screen Shot 2018-11-17 at 7.35.39 PM.png" alt="" class="header">
+      <p class="phoneNumber">(210) 429-6474</p>
       </header>
     </header>
     <aside>
@@ -81,7 +81,16 @@
             <img src="http://pngimg.com/uploads/apple_logo/apple_logo_PNG19681.png" alt="" class="article">
       </div>
     </article>
-    <footer>Footer</footer>
+    <footer>
+      <div class="textarea">
+      Email:
+      <textarea name="email" id="" cols="1" rows="3">amberlovescats14@gmail.com</textarea>
+      <button>Submit</button>
+      </div>
+      <div class="image">
+      <img src="./Screen Shot 2018-11-17 at 7.35.39 PM.png" alt="" class="footer">
+      </div>
+    </footer>
   </div>
 </body>
 </html>
