put media queries in the css but I cant think of what to put in the bottom right of my full size view

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -25,6 +25,7 @@
       <div class="aside">
           <i class="fas fa-building"></i>
         <h3>Work History</h3>
+        <br>
         <a href="http://www.paradiselawn.net/" class="paradise">Paradise Lawn and Maintenance</a>
         <ol>
             <li>
@@ -54,7 +55,7 @@
           <h3>Education</h3>
           <ol>
             <li>
-              <em>Austin Coding Academy</em>
+              <em>Austin Coding Academy</em><br>
               <span>Predicted Graduation 2019</span>
             </li>
               <li>
@@ -94,73 +95,3 @@
   </div>
 </body>
 </html>
-
-<!-- <body>
-
-
-  <nav>
-    <p class="name">Amber Jones</p>
-    <p class="title">Web Developer</p>
-    <p>(210) 429-6474 </p>
-    <img src="http://pngimg.com/uploads/apple_logo/apple_logo_PNG19689.png" alt="" class="header">
-  </nav>
-  <main>
-    <div id="right">
-      
-      <p class="info"> Garden   Ridge, Tx
-        Office Manager
-        January 2017 - June 2017</p>
-      <p>
-      </p>
-      <br>
-      
-      <p> San Antonio, TX — Beauty Advisor
-        January 2017 - June 2017
-      </p>
-      <ul>
-        <li>Directed recruitment, training, and staff development. </li>
-        <li>Cultivated strong business relations with customers.</li>
-        <li>Planned and executed floor merchandising initiatives. </li>
-      </ul>
-    </div>
-    <aside>
-      <div id="sidebar">
-        <h1>Education:</h1>
-
-      </div>
-    </aside>
-  </main>
-
-
-  <article>
-    <table>
-      <tr>
-        <th>Skills</th>
-        <th>Operating Systems</th>
-        <th>Language</th>
-      </tr>
-      <tr>
-        <td>59 WPM, with 98% accuracy. </td>
-        <td>HTML, CSS, JavaScript </td>
-        <td>
-          English </td>
-      </tr>
-    </table>
-
-  </article>
-
-
-  <footer>
-    <div id="footer">
-      <h3>
-        amberlovescats14@gmail.com <br>
-        <a href="http://google.com">Go To Google</a>
-      </h3>
-    </div>
-  </footer>
-
-
-
-</body>
-
-</html> -->
