--- a/checkpoint-two/index.html
+++ b/checkpoint-two/index.html
@@ -1,1 +1,61 @@
-
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Emilio's Portfolio</title>
+</head>
+<body>
+  <div class="gridContainer">
+    <div class="gridItem gridItem-1">Emilio Sanchez</div>
+    <div class="gridItem gridItem-2">
+      <div>
+        <a href="#">About</a>
+        <a href="#myWork">My Work</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+    <div class="gridItem gridItem-3">3</div>
+    <div class="gridItem gridItem-4">
+      <div>
+        <h2>About Emilio</h2>
+        <p>A little about me.</p>
+      </div>
+    </div>
+    <div class="gridItem gridItem-5">5</div>
+    <div class="gridItem gridItem-6">
+      <a name="myWork"></a>
+      <h2>My Work</h2>
+    </div>
+    <div class="gridItem gridItem-7">
+      <a href="https://sanchezel.github.io/web-workbook/checkpoint-one/">
+        Favor Landing Page Imitation
+      </a>
+    </div>
+    <div class="gridItem gridItem-8">
+      <a href="https://sanchezel.github.io/web-workbook/05week/grid-landing-page/">
+      Grid Landing Page</a>
+    </div>
+    <div class="gridItem gridItem-9">
+      <a href="https://sanchezel.github.io/web-workbook/04week/tomorrows-technology/">
+        Responsive Landing Page
+      </a>
+    </div>
+    <div class="gridItem gridItem-10">
+      <a href="https://sanchezel.github.io/web-workbook/03week/airplane/">
+        Airline Landing Page
+      </a>
+    </div>
+    <div class="gridItem gridItem-11">
+      <a href="https://sanchezel.github.io/web-workbook/02week/blog/">
+        Blog Site
+      </a>
+    </div>
+    <div class="gridItem gridItem-12">
+      <a name="contact"></a>
+      <h2>Contact Info</h2>
+    </div>
+  </div>
+</body>
+</html>
